[package]
name = "steam-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
csv = "1"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"